fix: 播放预览接口补上 itemId，让首次观看也能用上一集/下一集
VideoPreviewController.preview() 本来就查出了 VideoItem，只是没放进响应体，
导致前端 resolveSiblingEpisodes 只能靠 continueWatching() 反查 itemId——而
从未播放过的文件（含点开第一集）根本不在续播列表里，上一集/下一集因此永久
禁用，覆盖了首次观看这个最主要的使用场景。

- VideoPreviewView 加 itemId 字段，preview() 传入已算出的 item.getId()
- 前端 VideoPreviewView 类型同步加字段
- PlayerView.vue 的 resolveSiblingEpisodes 直接吃 videoPreview() 返回的
  itemId，不再依赖 continueWatching() 反查（续播位置查找逻辑不受影响）
- VideoPreviewControllerTest 补 itemId 断言

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01P2y6BWDXztUkVAUjwETr5X